--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    >
+<RelativeLayout
+    android:layout_width="400dp"
+    android:layout_height="400dp">
+    <com.example.minesweeper.MinesBoard
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="420dp"
+       >
+        <Button
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:id="@+id/MarkButton"
+            android:text="Mark Mode"
+            android:layout_marginStart="50dp" />
+        <Button
+            android:layout_marginLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/MarkButton"
+            android:layout_centerHorizontal="false"
+            android:id="@+id/UncoverButton"
+            android:text="Uncover Mode"
+            android:layout_marginStart="50dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="520dp">
+
+        <TextView
+            android:layout_marginTop="0dp"
+            android:text=" Total # of Mines"
+            android:textAlignment="center"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/total_mines"
+            android:gravity="center_horizontal" />
+        <TextView
+            android:layout_marginTop="0dp"
+            android:text=" 20"
+            android:textAlignment="center"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@id/total_mines"
+            android:gravity="center_horizontal"
+            android:layout_toEndOf="@id/total_mines" />
+        <TextView
+            android:layout_marginTop="70dp"
+
+            android:text=" Marked # of Mines"
+            android:textAlignment="center"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/marked_mines"
+            android:gravity="center_horizontal" />
+        <TextView
+            android:layout_marginTop="70dp"
+            android:text=" 20"
+            android:textAlignment="center"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@id/marked_mines"
+            android:gravity="center_horizontal"
+            android:layout_toEndOf="@id/marked_mines" />
+
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
