--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,15 @@ android:layout_height="match_parent"
     android:layout_height="400dp">
     <com.example.minesweeper.MinesBoard
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/MinesBoard"
+        />
 </RelativeLayout>
     <RelativeLayout
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_marginTop="420dp"
-       >
+        >
         <Button
             android:layout_marginLeft="50dp"
             android:layout_width="wrap_content"
